# bitcoin-mining-wasm-rs

./: .gitignore  Cargo.toml  README.md
frontend/: package.json  snowpack.config.js
frontend/public/: index.html
src/: block.rs  lib.rs  web.rs
