[package]
name = "bitcoin-mining-wasm-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-crypto-wasm = "0.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[dependencies.web-sys]
version = "0.3.77"
features = [
    "Document",
    "Element",
    "HTMLElement",
    "Node",
    "Window",
]
